[gd_scene load_steps=8 format=3 uid="uid://5adgviubrktk"]

[ext_resource type="Texture2D" uid="uid://cpwgj4gse8qry" path="res://sprites/player.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cqhvao3qoeikj" path="res://scenes/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cb3gqhjk6frkr" path="res://sprites/player_hit.png" id="2_qhqgy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dqkch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4flbx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qhqgy")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlg0r"]
size = Vector2(16, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuyoq"]
size = Vector2(10, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(4, 66)

[node name="Player" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_dqkch")
script = ExtResource("1_onrkg")
reg_speed = 350
metadata/_edit_group_ = true

[node name="OkayArea" type="Area2D" parent="."]

[node name="OkayCollisions" type="CollisionShape2D" parent="OkayArea"]
shape = SubResource("RectangleShape2D_qlg0r")

[node name="GoodArea" type="Area2D" parent="."]

[node name="GoodCollisions" type="CollisionShape2D" parent="GoodArea"]
shape = SubResource("RectangleShape2D_tuyoq")

[node name="PerfectArea" type="Area2D" parent="."]

[node name="PerfectCollisions" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource("RectangleShape2D_fjrip")

[node name="HitAnimationTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="GainPoints" type="Label" parent="."]
offset_left = -19.0
offset_top = -70.0
offset_right = 21.0
offset_bottom = -47.0
theme_override_font_sizes/font_size = 22

[node name="PointsTimer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="area_entered" from="OkayArea" to="." method="_on_OkayArea_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_OkayArea_exited"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_entered"]
[connection signal="area_exited" from="GoodArea" to="." method="_on_GoodArea_exited"]
[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_PerfectArea_exited"]
[connection signal="timeout" from="HitAnimationTimer" to="." method="_on_hit_animation_timeout"]
[connection signal="timeout" from="PointsTimer" to="." method="_on_points_timeout"]
